<resources>
    <string name="app_name">CVMaker</string>

    <string name="delete">Delete</string>

    <!-- Title -->
    <string name="Abilities">SKILLS</string>
    <string name="Certificates">CERTIFICATES</string>
    <string name="Communication">COMMUNICATION</string>
    <string name="Education">EDUCATION</string>
    <string name="Experience">EXPERIENCE</string>
    <string name="Languages">LANGUAGES</string>
    <string name="References">REFERENCES</string>
    <string name="SocialMedia">SOCIAL MEDIA</string>

    <!-- Abilities -->
    <string name="abilitiesName">Abilities Name * </string>
    <string name="level">level</string>
    <string name="empty">Empty</string>
    <string name="basis">Basis</string>
    <string name="average">Average</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>

    <!-- Certificates -->
    <string name="certificateProjectOrAwardName">Certificate, Project or Award Name * </string>
    <string name="educationPlace">Education Place * </string>
    <string name="startDate">Start Date * </string>
    <string name="finishDate">Finish Date * </string>
    <string name="aboutCertificate">About Certificate</string>

    <!-- Communication -->
    <string name="name">Name * </string>
    <string name="surname">Surname * </string>
    <string name="job">Job</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="aboutMe">About Me</string>
    <string name="address">Address</string>
    <string name="birtday">Birtday</string>
    <string name="gender">Gender</string>
    <string name="drivingLicence">Driver\'s License</string>
    <string name="military">Military</string>

    <!-- Education -->
    <string name="schoolName">School Name * </string>
    <string name="departmentName">Department Name</string>
    <string name="gano">GPA</string>
    <string name="finishDateExpected">Finish Date (expected) * </string>

    <!-- Experience -->
    <string name="companyName">Company Name * </string>
    <string name="positionName">Position Name * </string>
    <string name="infoAboutJob">Information About Job</string>
    <string name="startMonthDate">Start Date (Month) * </string>
    <string name="startYearDate">Start Date (Year) * </string>
    <string name="finishMonthDate">Finish Date (Month)</string>
    <string name="finishYearDate">Finish Date (Year)</string>

    <!-- Languages -->
    <string name="languageName">Language Name * </string>

    <!-- Social Media -->
    <string name="linkedIn">LinkedIn</string>
    <string name="github">Github</string>
    <string name="webSites">WebSites</string>

    <!-- References -->
    <string name="position">Position</string>

    <string name="optional">Optional</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="create">Create CV</string>

    <string name="note">Note : </string>
    <string name="noteMessage"> If you are continuing, you can leave the finish date blank. </string>
    <string name="present">Present</string>
    <string name="maxLength">maxLength : 150</string>

    <string name="messageForEmpty">Empty fields must be filled</string>
    <string name="messageForSaved">Saved Successfully</string>
    <string name="messageForCouldntCreate">Could not create PDF</string>
    <string name="messageForDownload">PDF saved successfully to Downloads folder!</string>
    <string name="messageForFailed">Failed to save PDF!</string>

    <string name="titleForAlert">"Are you sure?"</string>
    <string name="messageForAlert">Are you sure want to delete ? </string>
    <string name="buttonForAlert">Yes,delete it!</string>
    <string name="titleForDelete">Deleted! </string>
    <string name="messageForDelete">Has been deleted! </string>
    <string name="buttonForOK">OK</string>

    <string name="template">TEMPLATES</string>
    <string name="chooseLanguage">Language</string>

    <string name="CV">Created CV</string>
    <string name="dots">\u00A0 : \u00A0</string>
    <string name="line">\u00A0 - \u00A0</string>
    <string name="space">\u00A0</string>
    <string name="verticaLine">\u00A0 | \u00A0</string>

    <string name="emptyNameAndSurname">You should not leave the name and surname field blank.</string>

    <string name="contact">CONTACT</string>
    <string name="skills">SKILLS</string>
    <string name="summary">PROFILE SUMMARY</string>

    <string name="alert_exit">Exit</string>
    <string name="alert_logOut">Do you want to log out?</string>
    <string name="alert_No">No</string>
    <string name="alert_Yes">Yes</string>


    <string name="sampleTemplate">Sample Template</string>

    <string name="YourCVs">Your CVs</string>

    <string name="sharePDF">Share PDF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>