<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".ui.Abilities.AbilitiesAddFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etAbilitiesName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/abilitiesName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--   <SeekBar
           android:id="@+id/sbLevel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="50dp"
           app:layout_constraintEnd_toStartOf="@+id/tvLevel"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/textInputLayout"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

       <TextView
           android:id="@+id/tvLevel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="16dp"
           android:text="100"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

   -->


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/empty" />

            <RadioButton
                android:id="@+id/rbBasis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/basis" />


            <RadioButton
                android:id="@+id/rbAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/average" />


            <RadioButton
                android:id="@+id/rbAdvanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/advanced" />


            <RadioButton
                android:id="@+id/rbExpert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/expert" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ll" />


</androidx.constraintlayout.widget.ConstraintLayout>