<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".ui.Experience.ExperienceAddFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/companyName"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etPositionName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/positionName"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/etStartDateMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/startMonthDate"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/etStartDateYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/startYearDate"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/etFinishDateMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/finishMonthDate"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp">

            <EditText
                android:id="@+id/etFinishDateYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/finishYearDate"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/infoAboutJob"
            android:inputType="text"
            android:maxLines="5"
            android:maxLength="150"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxLength"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:textSize="10dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/note"
            android:textSize="14dp"
            android:textStyle="bold|italic"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/noteMessage"
            android:textSize="12dp"
            android:textStyle="italic"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:text="@string/add"
        android:textColor="@color/black" />


</LinearLayout>