<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    tools:context=".ui.References.ReferencesAddFragment">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etReferenceName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etReferenceSurname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/surname"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etPosition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/position"
            android:inputType="text"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="17"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:text="@string/add"
        android:textColor="@color/black" />


</LinearLayout>